--- a/Views/Shared/_PagingPartial.cshtml
+++ b/Views/Shared/_PagingPartial.cshtml
@@ -4,12 +4,14 @@
 @{
     int? CurrentPage = Model.CurrentPage;
     int? TotalPages = Model.TotalPages;
+    string action = Model.Action;
+    string queryString = string.IsNullOrEmpty(Model.Filter) ? "" : $"&{Model.Filter}";
 }
 <nav aria-label="Page navigation example">
     <ul class="pagination">
         <!-- Previous Button -->
         <li class="page-item @(CurrentPage == 1 ? "disabled" : "")">
-            <a class="page-link" href="@Url.Action("Index", new { page = CurrentPage - 1 })" aria-label="Previous">
+            <a class="page-link" href="@($"{Url.Action(action)}?page={CurrentPage - 1}{queryString}")" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
                 <span class="sr-only">Previous</span>
             </a>
@@ -21,14 +23,14 @@
             for (int i = 1; i <= TotalPages; i++)
             {
                 <li class="page-item @(i == CurrentPage ? "active" : "")">
-                    <a class="page-link" href="@Url.Action("Index", new { page = i })">@i</a>
+                    <a class="page-link" href="@($"{Url.Action(action)}?page={i}{queryString}")">@i</a>
                 </li>
             }
         }
 
         <!-- Next Button -->
         <li class="page-item @(CurrentPage == TotalPages ? "disabled" : "")">
-            <a class="page-link" href="@Url.Action("Index", new { page = CurrentPage + 1 })" aria-label="Next">
+            <a class="page-link" href="@($"{Url.Action(action)}?page={CurrentPage + 1}{queryString}")" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
                 <span class="sr-only">Next</span>
             </a>
